[gd_scene load_steps=50 format=4 uid="uid://bgkemk2m6os3t"]

[ext_resource type="Texture2D" uid="uid://bp40lf6f71uuf" path="res://assets/Environment/Grass/spr_grass_02.png" id="1_hly0j"]
[ext_resource type="Script" uid="uid://cimoq0o5ou60p" path="res://framework/word.gd" id="1_j4gq0"]
[ext_resource type="PackedScene" uid="uid://dswm5rfi2cvgy" path="res://framework/slimegrande.tscn" id="2_67swp"]
[ext_resource type="Texture2D" uid="uid://duwpyd4y73yk8" path="res://assets/Environment/Grass/spr_grass_01.png" id="2_f704g"]
[ext_resource type="PackedScene" uid="uid://dw8jxb8f14c81" path="res://framework/king_slime.tscn" id="3_oljrv"]
[ext_resource type="Texture2D" uid="uid://bi8nl66y8cin0" path="res://assets/Environment/Tile Set/spr_tile_set_ground.png" id="3_qh3sh"]
[ext_resource type="Texture2D" uid="uid://crqlq7ecm2jyg" path="res://assets/Environment/Tile Set/spr_tile_set_stone.png" id="4_j4gq0"]
[ext_resource type="PackedScene" uid="uid://i3kwlkrsekwa" path="res://framework/bat.tscn" id="5_lgcfr"]
[ext_resource type="Texture2D" uid="uid://b6mvgxs2sykbo" path="res://assets/Towers/Castle/spr_castle_green.png" id="5_p0huh"]
[ext_resource type="PackedScene" uid="uid://mbalq52s7bke" path="res://framework/enemigo.tscn" id="6_f704g"]
[ext_resource type="PackedScene" uid="uid://i66h767n64vx" path="res://framework/calaca.tscn" id="6_fta28"]
[ext_resource type="PackedScene" uid="uid://d1t66qqel25uv" path="res://framework/demon.tscn" id="7_8x576"]
[ext_resource type="PackedScene" uid="uid://cck8me5oy0q4i" path="res://framework/torre.tscn" id="7_qh3sh"]
[ext_resource type="PackedScene" uid="uid://bjjyt0jo816f8" path="res://framework/duende.tscn" id="8_5548c"]
[ext_resource type="PackedScene" uid="uid://bp3fo6l8egp6q" path="res://framework/UI/hud.tscn" id="8_j4gq0"]
[ext_resource type="PackedScene" uid="uid://d1xysrqyk2xty" path="res://framework/totrre_ca√±on.tscn" id="8_pnc0t"]
[ext_resource type="Texture2D" uid="uid://bmifts0jtif6a" path="res://assets/Towers/Combat Towers/spr_tower_archer.png" id="10_tfs2r"]
[ext_resource type="PackedScene" uid="uid://dbr2xnccbcb2c" path="res://framework/torre_vallestas.tscn" id="11_2b7m0"]
[ext_resource type="PackedScene" uid="uid://c1u8w7djw22r3" path="res://framework/UI/start.tscn" id="11_amhy8"]
[ext_resource type="Texture2D" uid="uid://b8i6nxghdh270" path="res://assets/Towers/Combat Towers/spr_tower_cannon.png" id="12_vrekg"]
[ext_resource type="Texture2D" uid="uid://d4h8jeovft5hw" path="res://assets/Towers/Combat Towers/spr_tower_crossbow.png" id="14_ydnhp"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_tfs2r"]
texture = ExtResource("1_hly0j")
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_amhy8"]
texture = ExtResource("2_f704g")
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0

[sub_resource type="TileSet" id="TileSet_pnc0t"]
sources/0 = SubResource("TileSetAtlasSource_tfs2r")
sources/1 = SubResource("TileSetAtlasSource_amhy8")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vrekg"]
texture = ExtResource("3_qh3sh")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
2:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_81qf0"]
texture = ExtResource("4_j4gq0")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
2:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0

[sub_resource type="TileSet" id="TileSet_2b7m0"]
sources/0 = SubResource("TileSetAtlasSource_vrekg")
sources/1 = SubResource("TileSetAtlasSource_81qf0")

[sub_resource type="AtlasTexture" id="AtlasTexture_ydnhp"]
atlas = ExtResource("5_p0huh")
region = Rect2(0, 0, 52, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_67swp"]
atlas = ExtResource("5_p0huh")
region = Rect2(52, 0, 52, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_oljrv"]
atlas = ExtResource("5_p0huh")
region = Rect2(104, 0, 52, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_4h4kg"]
atlas = ExtResource("5_p0huh")
region = Rect2(156, 0, 52, 38)

[sub_resource type="SpriteFrames" id="SpriteFrames_vxeuw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ydnhp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_67swp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oljrv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4h4kg")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vrekg"]
bg_color = Color(0.581233, 0.570806, 0.801678, 0.235294)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_81qf0"]
bg_color = Color(1.49205e-06, 0.614181, 0.0988253, 1)

[sub_resource type="Curve2D" id="Curve2D_lgcfr"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -4, 102, 0, 0, 0, 0, 184, 105, 0, 0, 0, 0, 184, 167, 0, 0, 0, 0, 295, 167, 0, 0, 0, 0, 295, 215, 0, 0, 0, 0, 119, 213, 0, 0, 0, 0, 120, 152, 0, 0, 0, 0, 39, 152, 0, 0, 0, 0, 39, 246, 0, 0, 0, 0, 342, 247, 0, 0, 0, 0, 344, 119, 0, 0, 0, 0, 232, 117, 0, 0, 0, 0, 231, 87, 0, 0, 0, 0, 426, 87)
}
point_count = 14

[sub_resource type="CircleShape2D" id="CircleShape2D_qh3sh"]
radius = 3.16228

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j4gq0"]
size = Vector2(192, 27)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p0huh"]
size = Vector2(174, 31)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tfs2r"]
size = Vector2(30, 127)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_amhy8"]
size = Vector2(64, 82)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pnc0t"]
size = Vector2(319.5, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vrekg"]
size = Vector2(56, 159)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_81qf0"]
size = Vector2(187, 18.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2b7m0"]
size = Vector2(201, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ydnhp"]
size = Vector2(29.5, 111)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_67swp"]
size = Vector2(45, 63)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oljrv"]
size = Vector2(113.5, 29)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4h4kg"]
size = Vector2(80, 33)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vxeuw"]
size = Vector2(192, 17.5)

[node name="word" type="Node2D"]
script = ExtResource("1_j4gq0")
slime_normal = ExtResource("6_f704g")
slime_grande = ExtResource("2_67swp")
king_slime = ExtResource("3_oljrv")
bat = ExtResource("5_lgcfr")
calaca = ExtResource("6_fta28")
demon = ExtResource("7_8x576")
duende = ExtResource("8_5548c")
max_tower_health = 1000.0

[node name="TM_grass" type="TileMapLayer" parent="."]
z_index = -101
tile_map_data = PackedByteArray("AAAAAAAAAQAAAAAAAAAAAAEAAQAAAAEAAAABAAAAAQABAAAAAAABAAEAAQABAAEAAAAAAAIAAQAAAAAAAAAAAAMAAQAAAAEAAAABAAIAAQABAAAAAAABAAMAAQABAAEAAAAAAAQAAQAAAAAAAAAAAAUAAQAAAAEAAAABAAQAAQABAAAAAAABAAUAAQABAAEAAAAAAAYAAQAAAAAAAAAAAAcAAQAAAAEAAAABAAYAAQABAAAAAAABAAcAAQABAAEAAAAAAAgAAQAAAAAAAAAAAAkAAQAAAAEAAAABAAgAAQABAAAAAAABAAkAAQABAAEAAAAAAAoAAQAAAAAAAAAAAAsAAQAAAAEAAAABAAoAAQABAAAAAAABAAsAAQABAAEAAAAAAAwAAQAAAAAAAAAAAA0AAQAAAAEAAAABAAwAAQABAAAAAAABAA0AAQABAAEAAAAAAA4AAQAAAAAAAAAAAA8AAQAAAAEAAAABAA4AAQABAAAAAAABAA8AAQABAAEAAAAAABAAAQAAAAAAAAABABAAAQABAAAAAAACAAAAAQAAAAAAAAACAAEAAQAAAAEAAAADAAAAAQABAAAAAAADAAEAAQABAAEAAAACAAIAAQAAAAAAAAACAAMAAQAAAAEAAAADAAIAAQABAAAAAAADAAMAAQABAAEAAAACAAQAAQAAAAAAAAACAAUAAQAAAAEAAAADAAQAAQABAAAAAAADAAUAAQABAAEAAAACAAYAAQAAAAAAAAADAAYAAQABAAAAAAADAAcAAQABAAEAAAACAAgAAQAAAAAAAAACAAkAAQAAAAEAAAADAAgAAQABAAAAAAADAAkAAQABAAEAAAACAAoAAQAAAAAAAAACAAsAAQAAAAEAAAADAAoAAQABAAAAAAADAAsAAQABAAEAAAACAAwAAQAAAAAAAAACAA0AAQAAAAEAAAADAAwAAQABAAAAAAADAA0AAQABAAEAAAACAA4AAQAAAAAAAAACAA8AAQAAAAEAAAADAA4AAQABAAAAAAADAA8AAQABAAEAAAACABAAAQAAAAAAAAADABAAAQABAAAAAAAEAAAAAQAAAAAAAAAEAAEAAQAAAAEAAAAFAAAAAQABAAAAAAAFAAEAAQABAAEAAAAEAAIAAQAAAAAAAAAEAAMAAQAAAAEAAAAFAAIAAQABAAAAAAAFAAMAAQABAAEAAAAEAAQAAQAAAAAAAAAEAAUAAQAAAAEAAAAFAAQAAQABAAAAAAAFAAUAAQABAAEAAAAEAAYAAQAAAAAAAAAEAAcAAQAAAAEAAAAFAAYAAQABAAAAAAAFAAcAAQABAAEAAAAEAAgAAQAAAAAAAAAEAAkAAQAAAAEAAAAFAAgAAQABAAAAAAAFAAkAAQABAAEAAAAEAAoAAQAAAAAAAAAEAAsAAQAAAAEAAAAFAAoAAQABAAAAAAAFAAsAAQABAAEAAAAEAAwAAQAAAAAAAAAEAA0AAQAAAAEAAAAFAAwAAQABAAAAAAAFAA0AAQABAAEAAAAEAA4AAQAAAAAAAAAEAA8AAQAAAAEAAAAFAA4AAQABAAAAAAAFAA8AAQABAAEAAAAEABAAAQAAAAAAAAAFABAAAQABAAAAAAAGAAAAAQAAAAAAAAAGAAEAAQAAAAEAAAAHAAAAAQABAAAAAAAHAAEAAQABAAEAAAAGAAIAAQAAAAAAAAAGAAMAAQAAAAEAAAAHAAIAAQABAAAAAAAHAAMAAQABAAEAAAAGAAQAAQAAAAAAAAAGAAUAAQAAAAEAAAAHAAQAAQABAAAAAAAHAAUAAQABAAEAAAAGAAYAAQAAAAAAAAAGAAcAAQAAAAEAAAAHAAYAAQABAAAAAAAHAAcAAQABAAEAAAAGAAgAAQAAAAAAAAAGAAkAAQAAAAEAAAAHAAgAAQABAAAAAAAHAAkAAQABAAEAAAAGAAoAAQAAAAAAAAAGAAsAAQAAAAEAAAAHAAoAAQABAAAAAAAHAAsAAQABAAEAAAAGAAwAAQAAAAAAAAAGAA0AAQAAAAEAAAAHAAwAAQABAAAAAAAHAA0AAQABAAEAAAAGAA4AAQAAAAAAAAAGAA8AAQAAAAEAAAAHAA4AAQABAAAAAAAHAA8AAQABAAEAAAAGABAAAQAAAAAAAAAHABAAAQABAAAAAAAIAAAAAQAAAAAAAAAIAAEAAQAAAAEAAAAJAAAAAQABAAAAAAAJAAEAAQABAAEAAAAIAAIAAQAAAAAAAAAIAAMAAQAAAAEAAAAJAAIAAQABAAAAAAAJAAMAAQABAAEAAAAIAAQAAQAAAAAAAAAIAAUAAQAAAAEAAAAJAAQAAQABAAAAAAAJAAUAAQABAAEAAAAIAAYAAQAAAAAAAAAIAAcAAQAAAAEAAAAJAAYAAQABAAAAAAAJAAcAAQABAAEAAAAIAAgAAQAAAAAAAAAIAAkAAQAAAAEAAAAJAAgAAQABAAAAAAAJAAkAAQABAAEAAAAIAAoAAQAAAAAAAAAIAAsAAQAAAAEAAAAJAAoAAQABAAAAAAAJAAsAAQABAAEAAAAIAAwAAQAAAAAAAAAIAA0AAQAAAAEAAAAJAAwAAQABAAAAAAAJAA0AAQABAAEAAAAIAA4AAQAAAAAAAAAIAA8AAQAAAAEAAAAJAA4AAQABAAAAAAAJAA8AAQABAAEAAAAIABAAAQAAAAAAAAAJABAAAQABAAAAAAAKAAAAAQAAAAAAAAAKAAEAAQAAAAEAAAALAAAAAQABAAAAAAALAAEAAQABAAEAAAAKAAIAAQAAAAAAAAAKAAMAAQAAAAEAAAALAAIAAQABAAAAAAALAAMAAQABAAEAAAAKAAQAAQAAAAAAAAAKAAUAAQAAAAEAAAALAAQAAQABAAAAAAALAAUAAQABAAEAAAAKAAYAAQAAAAAAAAAKAAcAAQAAAAEAAAALAAYAAQABAAAAAAALAAcAAQABAAEAAAAKAAgAAQAAAAAAAAAKAAkAAQAAAAEAAAALAAgAAQABAAAAAAALAAkAAQABAAEAAAAKAAsAAQAAAAEAAAALAAoAAQABAAAAAAALAAsAAQABAAEAAAAKAAwAAQAAAAAAAAAKAA0AAQAAAAEAAAALAAwAAQABAAAAAAALAA0AAQABAAEAAAAKAA4AAQAAAAAAAAAKAA8AAQAAAAEAAAALAA4AAQABAAAAAAALAA8AAQABAAEAAAAKABAAAQAAAAAAAAALABAAAQABAAAAAAAMAAAAAQAAAAAAAAAMAAEAAQAAAAEAAAANAAAAAQABAAAAAAANAAEAAQABAAEAAAAMAAIAAQAAAAAAAAAMAAMAAQAAAAEAAAANAAIAAQABAAAAAAANAAMAAQABAAEAAAAMAAQAAQAAAAAAAAAMAAUAAQAAAAEAAAANAAQAAQABAAAAAAANAAUAAQABAAEAAAAMAAYAAQAAAAAAAAAMAAcAAQAAAAEAAAANAAYAAQABAAAAAAANAAcAAQABAAEAAAAMAAgAAQAAAAAAAAAMAAkAAQAAAAEAAAANAAgAAQABAAAAAAANAAkAAQABAAEAAAAMAAoAAQAAAAAAAAAMAAsAAQAAAAEAAAANAAoAAQABAAAAAAANAAsAAQABAAEAAAAMAAwAAQAAAAAAAAAMAA0AAQAAAAEAAAANAAwAAQABAAAAAAANAA0AAQABAAEAAAAMAA4AAQAAAAAAAAAMAA8AAQAAAAEAAAANAA4AAQABAAAAAAANAA8AAQABAAEAAAAMABAAAQAAAAAAAAANABAAAQABAAAAAAAOAAAAAQAAAAAAAAAOAAEAAQAAAAEAAAAPAAAAAQABAAAAAAAPAAEAAQABAAEAAAAOAAIAAQAAAAAAAAAOAAMAAQAAAAEAAAAPAAIAAQABAAAAAAAPAAMAAQABAAEAAAAOAAQAAQAAAAAAAAAOAAUAAQAAAAEAAAAPAAQAAQABAAAAAAAPAAUAAQABAAEAAAAOAAYAAQAAAAAAAAAOAAcAAQAAAAEAAAAPAAYAAQABAAAAAAAPAAcAAQABAAEAAAAOAAgAAQAAAAAAAAAOAAkAAQAAAAEAAAAPAAgAAQABAAAAAAAPAAkAAQABAAEAAAAOAAoAAQAAAAAAAAAOAAsAAQAAAAEAAAAPAAoAAQABAAAAAAAPAAsAAQABAAEAAAAOAAwAAQAAAAAAAAAOAA0AAQAAAAEAAAAPAAwAAQABAAAAAAAPAA0AAQABAAEAAAAOAA4AAQAAAAAAAAAOAA8AAQAAAAEAAAAPAA4AAQABAAAAAAAPAA8AAQABAAEAAAAOABAAAQAAAAAAAAAPABAAAQABAAAAAAAQAAAAAQAAAAAAAAAQAAEAAQAAAAEAAAARAAAAAQABAAAAAAARAAEAAQABAAEAAAAQAAIAAQAAAAAAAAAQAAMAAQAAAAEAAAARAAIAAQABAAAAAAARAAMAAQABAAEAAAAQAAQAAQAAAAAAAAAQAAUAAQAAAAEAAAARAAQAAQABAAAAAAARAAUAAQABAAEAAAAQAAYAAQAAAAAAAAAQAAcAAQAAAAEAAAARAAYAAQABAAAAAAARAAcAAQABAAEAAAAQAAgAAQAAAAAAAAAQAAkAAQAAAAEAAAARAAgAAQABAAAAAAARAAkAAQABAAEAAAAQAAoAAQAAAAAAAAAQAAsAAQAAAAEAAAARAAoAAQABAAAAAAARAAsAAQABAAEAAAAQAAwAAQAAAAAAAAAQAA0AAQAAAAEAAAARAAwAAQABAAAAAAARAA0AAQABAAEAAAAQAA4AAQAAAAAAAAAQAA8AAQAAAAEAAAARAA4AAQABAAAAAAARAA8AAQABAAEAAAAQABAAAQAAAAAAAAARABAAAQABAAAAAAASAAAAAQAAAAAAAAASAAEAAQAAAAEAAAATAAAAAQABAAAAAAATAAEAAQABAAEAAAASAAIAAQAAAAAAAAASAAMAAQAAAAEAAAATAAIAAQABAAAAAAATAAMAAQABAAEAAAASAAQAAQAAAAAAAAASAAUAAQAAAAEAAAATAAQAAQABAAAAAAATAAUAAQABAAEAAAASAAYAAQAAAAAAAAASAAcAAQAAAAEAAAATAAYAAQABAAAAAAATAAcAAQABAAEAAAASAAgAAQAAAAAAAAASAAkAAQAAAAEAAAATAAgAAQABAAAAAAATAAkAAQABAAEAAAASAAoAAQAAAAAAAAASAAsAAQAAAAEAAAATAAoAAQABAAAAAAATAAsAAQABAAEAAAASAAwAAQAAAAAAAAASAA0AAQAAAAEAAAATAAwAAQABAAAAAAATAA0AAQABAAEAAAASAA4AAQAAAAAAAAASAA8AAQAAAAEAAAATAA4AAQABAAAAAAATAA8AAQABAAEAAAASABAAAQAAAAAAAAATABAAAQABAAAAAAAUAAAAAQAAAAAAAAAUAAEAAQAAAAEAAAAVAAAAAQABAAAAAAAVAAEAAQABAAEAAAAUAAIAAQAAAAAAAAAUAAMAAQAAAAEAAAAVAAIAAQABAAAAAAAVAAMAAQABAAEAAAAUAAQAAQAAAAAAAAAUAAUAAQAAAAEAAAAVAAQAAQABAAAAAAAVAAUAAQABAAEAAAAUAAYAAQAAAAAAAAAUAAcAAQAAAAEAAAAVAAYAAQABAAAAAAAVAAcAAQABAAEAAAAUAAgAAQAAAAAAAAAUAAkAAQAAAAEAAAAVAAgAAQABAAAAAAAVAAkAAQABAAEAAAAUAAoAAQAAAAAAAAAUAAsAAQAAAAEAAAAVAAoAAQABAAAAAAAVAAsAAQABAAEAAAAUAAwAAQAAAAAAAAAUAA0AAQAAAAEAAAAVAAwAAQABAAAAAAAVAA0AAQABAAEAAAAUAA4AAQAAAAAAAAAUAA8AAQAAAAEAAAAVAA4AAQABAAAAAAAVAA8AAQABAAEAAAAUABAAAQAAAAAAAAAVABAAAQABAAAAAAAWAAAAAQAAAAAAAAAWAAEAAQAAAAEAAAAXAAAAAQABAAAAAAAXAAEAAQABAAEAAAAWAAIAAQAAAAAAAAAWAAMAAQAAAAEAAAAXAAIAAQABAAAAAAAXAAMAAQABAAEAAAAWAAQAAQAAAAAAAAAWAAUAAQAAAAEAAAAXAAQAAQABAAAAAAAXAAUAAQABAAEAAAAWAAYAAQAAAAAAAAAWAAcAAQAAAAEAAAAXAAYAAQABAAAAAAAXAAcAAQABAAEAAAAWAAgAAQAAAAAAAAAWAAkAAQAAAAEAAAAXAAgAAQABAAAAAAAXAAkAAQABAAEAAAAWAAoAAQAAAAAAAAAWAAsAAQAAAAEAAAAXAAoAAQABAAAAAAAXAAsAAQABAAEAAAAWAAwAAQAAAAAAAAAWAA0AAQAAAAEAAAAXAAwAAQABAAAAAAAXAA0AAQABAAEAAAAWAA4AAQAAAAAAAAAWAA8AAQAAAAEAAAAXAA4AAQABAAAAAAAXAA8AAQABAAEAAAAWABAAAQAAAAAAAAAXABAAAQABAAAAAAAYAAAAAQAAAAAAAAAYAAEAAQAAAAEAAAAZAAAAAQABAAAAAAAZAAEAAQABAAEAAAAYAAIAAQAAAAAAAAAYAAMAAQAAAAEAAAAZAAIAAQABAAAAAAAZAAMAAQABAAEAAAAYAAQAAQAAAAAAAAAYAAUAAQAAAAEAAAAZAAQAAQABAAAAAAAZAAUAAQABAAEAAAAYAAYAAQAAAAAAAAAYAAcAAQAAAAEAAAAZAAYAAQABAAAAAAAZAAcAAQABAAEAAAAYAAgAAQAAAAAAAAAYAAkAAQAAAAEAAAAZAAgAAQABAAAAAAAZAAkAAQABAAEAAAAYAAoAAQAAAAAAAAAYAAsAAQAAAAEAAAAZAAoAAQABAAAAAAAZAAsAAQABAAEAAAAYAAwAAQAAAAAAAAAYAA0AAQAAAAEAAAAZAAwAAQABAAAAAAAZAA0AAQABAAEAAAAYAA4AAQAAAAAAAAAYAA8AAQAAAAEAAAAZAA4AAQABAAAAAAAZAA8AAQABAAEAAAAYABAAAQAAAAAAAAAZABAAAQABAAAAAAAaAAAAAQAAAAAAAAAaAAEAAQAAAAEAAAAbAAAAAQABAAAAAAAbAAEAAQABAAEAAAAaAAIAAQAAAAAAAAAaAAMAAQAAAAEAAAAbAAIAAQABAAAAAAAbAAMAAQABAAEAAAAaAAQAAQAAAAAAAAAaAAUAAQAAAAEAAAAbAAQAAQABAAAAAAAbAAUAAQABAAEAAAAaAAYAAQAAAAAAAAAaAAcAAQAAAAEAAAAbAAYAAQABAAAAAAAbAAcAAQABAAEAAAAaAAgAAQAAAAAAAAAaAAkAAQAAAAEAAAAbAAgAAQABAAAAAAAbAAkAAQABAAEAAAAaAAoAAQAAAAAAAAAaAAsAAQAAAAEAAAAbAAoAAQABAAAAAAAbAAsAAQABAAEAAAAaAAwAAQAAAAAAAAAaAA0AAQAAAAEAAAAbAAwAAQABAAAAAAAbAA0AAQABAAEAAAAaAA4AAQAAAAAAAAAaAA8AAQAAAAEAAAAbAA4AAQABAAAAAAAbAA8AAQABAAEAAAAaABAAAQAAAAAAAAAbABAAAQABAAAAAAAcAAAAAQAAAAAAAAAcAAEAAQAAAAEAAAAdAAAAAQABAAAAAAAdAAEAAQABAAEAAAAcAAIAAQAAAAAAAAAcAAMAAQAAAAEAAAAdAAIAAQABAAAAAAAdAAMAAQABAAEAAAAcAAQAAQAAAAAAAAAcAAUAAQAAAAEAAAAdAAQAAQABAAAAAAAdAAUAAQABAAEAAAAcAAYAAQAAAAAAAAAcAAcAAQAAAAEAAAAdAAYAAQABAAAAAAAdAAcAAQABAAEAAAAcAAgAAQAAAAAAAAAcAAkAAQAAAAEAAAAdAAgAAQABAAAAAAAdAAkAAQABAAEAAAAcAAoAAQAAAAAAAAAcAAsAAQAAAAEAAAAdAAoAAQABAAAAAAAdAAsAAQABAAEAAAAcAAwAAQAAAAAAAAAcAA0AAQAAAAEAAAAdAAwAAQABAAAAAAAdAA0AAQABAAEAAAAcAA4AAQAAAAAAAAAcAA8AAQAAAAEAAAAdAA4AAQABAAAAAAAdAA8AAQABAAEAAAAcABAAAQAAAAAAAAAdABAAAQABAAAAAAAKAAoAAQAAAAAAAAACAAcAAQAAAAEAAAA=")
tile_set = SubResource("TileSet_pnc0t")

[node name="TM_camino" type="TileMapLayer" parent="."]
z_index = -100
tile_map_data = PackedByteArray("AAAAAAYAAQABAAAAAAABAAYAAQABAAAAAAACAAYAAQABAAAAAAADAAYAAQABAAAAAAAEAAYAAQABAAAAAAAFAAYAAQABAAAAAAAGAAYAAQABAAAAAAAHAAYAAQABAAAAAAAIAAYAAQABAAAAAAAJAAYAAQABAAAAAAAKAAYAAQABAAAAAAALAAYAAQACAAAAAAALAAcAAQACAAEAAAALAAgAAQACAAEAAAALAAkAAQACAAEAAAALAAoAAQAAAAIAAAAMAAoAAQABAAAAAAANAAoAAQABAAAAAAAOAAoAAQABAAAAAAAPAAoAAQABAAAAAAAQAAoAAQABAAAAAAARAAoAAQABAAAAAAASAAoAAQACAAAAAAASAAsAAQACAAEAAAASAAwAAQACAAEAAAASAA0AAQACAAIAAAAIAA0AAQABAAIAAAAJAA0AAQABAAIAAAAKAA0AAQABAAIAAAALAA0AAQABAAIAAAAMAA0AAQABAAIAAAANAA0AAQABAAIAAAAOAA0AAQABAAIAAAAPAA0AAQABAAIAAAAQAA0AAQABAAIAAAARAA0AAQABAAIAAAAHAA0AAQAAAAIAAAAHAAkAAQACAAAAAAAHAAoAAQAAAAEAAAAHAAsAAQAAAAEAAAAHAAwAAQAAAAEAAAADAAkAAQABAAAAAAAEAAkAAQABAAAAAAAFAAkAAQABAAAAAAAGAAkAAQABAAAAAAACAAkAAQAAAAAAAAACAAoAAQAAAAEAAAACAAsAAQAAAAEAAAACAAwAAQAAAAEAAAACAA0AAQAAAAEAAAACAA4AAQAAAAEAAAACAA8AAQAAAAIAAAADAA8AAQABAAIAAAAEAA8AAQABAAIAAAAFAA8AAQABAAIAAAAGAA8AAQABAAIAAAAHAA8AAQABAAIAAAAIAA8AAQABAAIAAAAJAA8AAQABAAIAAAAKAA8AAQABAAIAAAALAA8AAQABAAIAAAAMAA8AAQABAAIAAAANAA8AAQABAAIAAAAOAA8AAQABAAIAAAAPAA8AAQABAAIAAAAQAA8AAQABAAIAAAARAA8AAQABAAIAAAASAA8AAQABAAIAAAATAA8AAQABAAIAAAAUAA8AAQABAAIAAAAVAA8AAQACAAIAAAAVAAcAAQACAAAAAAAVAAgAAQACAAEAAAAVAAkAAQACAAEAAAAVAAoAAQACAAEAAAAVAAsAAQACAAEAAAAVAAwAAQACAAEAAAAVAA0AAQACAAEAAAAVAA4AAQACAAEAAAAOAAcAAQAAAAIAAAAPAAcAAQABAAAAAAAQAAcAAQABAAAAAAARAAcAAQABAAAAAAASAAcAAQABAAAAAAATAAcAAQABAAAAAAAUAAcAAQABAAAAAAAOAAYAAQAAAAEAAAARAAUAAQABAAIAAAASAAUAAQABAAIAAAATAAUAAQABAAIAAAAUAAUAAQABAAIAAAAVAAUAAQABAAIAAAAWAAUAAQABAAIAAAAXAAUAAQABAAIAAAAYAAUAAQABAAIAAAAZAAUAAQABAAIAAAAaAAUAAQABAAIAAAAPAAUAAQABAAIAAAAQAAUAAQABAAIAAAAOAAUAAQAAAAAAAAA=")
tile_set = SubResource("TileSet_2b7m0")

[node name="Castillo" type="AnimatedSprite2D" parent="."]
position = Vector2(448, 75)
sprite_frames = SubResource("SpriteFrames_vxeuw")
frame = 3
frame_progress = 0.748932

[node name="ProgressBar" type="ProgressBar" parent="Castillo"]
offset_left = -30.0
offset_top = -37.0
offset_right = 32.0
offset_bottom = -19.0
theme_override_font_sizes/font_size = 10
theme_override_styles/background = SubResource("StyleBoxFlat_vrekg")
theme_override_styles/fill = SubResource("StyleBoxFlat_81qf0")
max_value = 1.0
value = 1.0

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_lgcfr")

[node name="buildCheker" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="buildCheker"]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_qh3sh")

[node name="buildZone" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="buildZone"]
position = Vector2(97, 75.5)
shape = SubResource("RectangleShape2D_j4gq0")
debug_color = Color(0.750575, 0.289455, 0.263853, 0.42)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="buildZone"]
position = Vector2(88, 127.5)
shape = SubResource("RectangleShape2D_p0huh")
debug_color = Color(0.750575, 0.289455, 0.263853, 0.42)

[node name="CollisionShape2D3" type="CollisionShape2D" parent="buildZone"]
position = Vector2(16, 207.5)
shape = SubResource("RectangleShape2D_tfs2r")
debug_color = Color(0.750575, 0.289455, 0.263853, 0.42)

[node name="CollisionShape2D4" type="CollisionShape2D" parent="buildZone"]
position = Vector2(79, 199)
shape = SubResource("RectangleShape2D_amhy8")
debug_color = Color(0.750575, 0.289455, 0.263853, 0.42)

[node name="CollisionShape2D5" type="CollisionShape2D" parent="buildZone"]
position = Vector2(194, 264)
shape = SubResource("RectangleShape2D_pnc0t")
debug_color = Color(0.750575, 0.289455, 0.263853, 0.42)

[node name="CollisionShape2D6" type="CollisionShape2D" parent="buildZone"]
position = Vector2(381, 191.5)
shape = SubResource("RectangleShape2D_vrekg")
debug_color = Color(0.750575, 0.289455, 0.263853, 0.42)

[node name="CollisionShape2D7" type="CollisionShape2D" parent="buildZone"]
position = Vector2(332.5, 102.75)
shape = SubResource("RectangleShape2D_81qf0")
debug_color = Color(0.750575, 0.289455, 0.263853, 0.42)

[node name="CollisionShape2D8" type="CollisionShape2D" parent="buildZone"]
position = Vector2(325.5, 69)
shape = SubResource("RectangleShape2D_2b7m0")
debug_color = Color(0.750575, 0.289455, 0.263853, 0.42)

[node name="CollisionShape2D9" type="CollisionShape2D" parent="buildZone"]
position = Vector2(209, 105)
shape = SubResource("RectangleShape2D_ydnhp")
debug_color = Color(0.750575, 0.289455, 0.263853, 0.42)

[node name="CollisionShape2D12" type="CollisionShape2D" parent="buildZone"]
position = Vector2(320, 186)
shape = SubResource("RectangleShape2D_ydnhp")
debug_color = Color(0.750575, 0.289455, 0.263853, 0.42)

[node name="CollisionShape2D10" type="CollisionShape2D" parent="buildZone"]
position = Vector2(151.5, 175.5)
shape = SubResource("RectangleShape2D_67swp")
debug_color = Color(0.750575, 0.289455, 0.263853, 0.42)

[node name="CollisionShape2D11" type="CollisionShape2D" parent="buildZone"]
position = Vector2(230.75, 191.5)
shape = SubResource("RectangleShape2D_oljrv")
debug_color = Color(0.750575, 0.289455, 0.263853, 0.42)

[node name="CollisionShape2D13" type="CollisionShape2D" parent="buildZone"]
position = Vector2(264, 144.5)
shape = SubResource("RectangleShape2D_4h4kg")
debug_color = Color(0.750575, 0.289455, 0.263853, 0.42)

[node name="CollisionShape2D14" type="CollisionShape2D" parent="buildZone"]
position = Vector2(207, 231.25)
shape = SubResource("RectangleShape2D_vxeuw")
debug_color = Color(0.750575, 0.289455, 0.263853, 0.42)

[node name="builTower" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="builTower"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="hud" parent="CanvasLayer" node_paths=PackedStringArray("world_ref") instance=ExtResource("8_j4gq0")]
offset_left = 2.0
offset_top = 2.0
offset_right = 2.0
offset_bottom = -2.0
world_ref = NodePath("../..")
towers = Array[PackedScene]([ExtResource("7_qh3sh"), ExtResource("8_pnc0t"), ExtResource("11_2b7m0")])
textures = Array[Texture]([ExtResource("10_tfs2r"), ExtResource("12_vrekg"), ExtResource("14_ydnhp")])

[node name="Start" parent="CanvasLayer" instance=ExtResource("11_amhy8")]

[connection signal="area_entered" from="buildCheker" to="." method="_on_build_cheker_area_entered"]
[connection signal="area_exited" from="buildCheker" to="." method="_on_build_cheker_area_exited"]
